Prevent the info-icons in the result row from smushing together on smaller widths. Instead start the citation on a new line.

--- a/metacatui/src/main/webapp/js/themes/default/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/default/css/metacatui.css
@@ -1403,7 +1403,11 @@ Bold 700
   		left: -320%;
   	}
     
-    /*-- Result row icons --*/   
+    /*-- Result row icons --*/ 
+    .info-icons{
+    	min-width: 28px;
+    }
+      
     .result-row i.has-data{
     	color: #666;
     	margin-left: 10px;
